--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -25,6 +25,7 @@
     <main>
       <h1>FullStack Developer</h1>
       <p>I code beatifully simple things, and love what i do</p>
+      <img src="image/avatar-bis.png" alt="" />
       <!-- First banner with title, description, avatar and image desktop -->
       <!-- You can use the avatar image on the folder image -->
       <section>
