--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -22,11 +22,17 @@
     <main>
       <!-- First banner with title, description, avatar and image desktop -->
       <!-- You can use the avatar image on the folder image -->
-      <section>
-        <figure class="desktop">
-          <img src="image/desktop.svg" alt="desktop" />
-        </figure>
-      </section>
+      <div class="banner">
+        <h2>FullStack Developper</h2>
+        <p>I code beautiful simple things and I love what I do</p>
+        <img src="./image/avatar.svg" alt="avatar">
+        <section>
+          <figure class="desktop">
+            <img src="image/desktop.svg" alt="desktop" />
+          </figure>
+        </section>
+      </div>
+      
 
       <!-- Second banner with description of your name and your presentation -->
       <article>
@@ -37,9 +43,9 @@
       </article>
 
       <!-- Bloc of list of skill front end and back end -->
-        
       <article class="skills">
         <h2 class="skills--title">My Skills</h2>
+        <div>
           <section class="column">
               <img src="image/frontend.svg" alt="" />
               <h3>Back-end Developer</h3>
@@ -64,32 +70,35 @@
                 <li>You can modify</li>
               </ul>
             </section>
+        </div>
       </article>
 
       <!-- Third banner with list of all your projects -->
       <article class="projects">
           <h2>My Recent Work</h2>
           <p>Here are a few projects I've worked on recently. Want to see more? Email me.</p>
-          <section class="box">
-            <img src="https://mattfarley.ca/img/logos/kybercore.svg" alt="logo-entreprise" />
-            <p>Next level plug and play chassis systems for custom do-it-yourself lightsaber builds.</p>
-            <a class="disabled" >In development</a>
-          </section>
-          <section class="box">
-            <img src="https://mattfarley.ca/img/logos/basin.svg" alt="logo-entreprise" />
-            <p>A powerful, easy-to-configure form backend for designers and developers. No coding required.</p>
-            <a href="www.usebasin.com">www.usebasin.com</a>
-          </section>
-          <section class="box">
-            <img src="https://mattfarley.ca/img/logos/ylbuilders.svg" alt="logo-entreprise" />
-            <p>Beautifully simple websites for independent distributors of Young Living Essential Oils.</p>
-            <a href="www.ylbuilders.com">www.ylbuilders.com</a>
-          </section>
-          <section class="box">
-            <img src="https://mattfarley.ca/img/logos/dovetail.svg" alt="logo-entreprise" />
-            <p>A space and member management solution for coworking communities both big and small.</p>
-            <a class="disabled" >Shutdown in 2017</a>
-          </section>
+          <div>
+            <section class="box">
+              <img src="https://mattfarley.ca/img/logos/kybercore.svg" alt="logo-entreprise" />
+              <p>Next level plug and play chassis systems for custom do-it-yourself lightsaber builds.</p>
+              <a class="disabled" >In development</a>
+            </section>
+            <section class="box">
+              <img src="https://mattfarley.ca/img/logos/basin.svg" alt="logo-entreprise" />
+              <p>A powerful, easy-to-configure form backend for designers and developers. No coding required.</p>
+              <a href="www.usebasin.com">www.usebasin.com</a>
+            </section>
+            <section class="box">
+              <img src="https://mattfarley.ca/img/logos/ylbuilders.svg" alt="logo-entreprise" />
+              <p>Beautifully simple websites for independent distributors of Young Living Essential Oils.</p>
+              <a href="www.ylbuilders.com">www.ylbuilders.com</a>
+            </section>
+            <section class="box">
+              <img src="https://mattfarley.ca/img/logos/dovetail.svg" alt="logo-entreprise" />
+              <p>A space and member management solution for coworking communities both big and small.</p>
+              <a class="disabled" >Shutdown in 2017</a>
+            </section>
+          </div>
       </article>      
     </main>
     <footer class="description pink-bg">
