finish js without bonus

--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -29,7 +29,7 @@
         <div class="section-container">
           <h1>FullStack Developer</h1>
           <p>Je suis Stéphane et je code rapidement et efficacement</p>
-          <img src="../site/image/avatar.svg" alt="photo de profil" />
+          <img src="../site/image/avatar-bis.png" alt="photo de profil" />
         </div>
       </section>
       <section class="figure-desktop">
