Forgot to push the change... Here all the CSS & JS...Sorry !

--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/portfolio.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/portfolio.css">
     <title>Checkpoint 1 Portfolio</title>
   </head>
 
@@ -21,25 +21,33 @@
 
     <main>
       <!-- First banner with title, description, avatar and image desktop -->
+        <div class="firstBanner">
+            <h1> FullStack Developer</h1>
+            <h3>I code beautifully simple things, and i love what i do</h3>
+            <img id="avatarImage" src="./image/avatar.svg" alt="pic">
+            <section>
+                <figure class="desktop">
+                    <img src="image/desktop.svg" alt="desktop" />
+                </figure>
+            </section>
+        </div>
       <!-- You can use the avatar image on the folder image -->
-      <section>
-        <figure class="desktop">
-          <img src="image/desktop.svg" alt="desktop" />
-        </figure>
-      </section>
+
 
       <!-- Second banner with description of your name and your presentation -->
       <article>
         <section class="description pink-bg">
           <h1>Hi, I’m <span id="firstname">Matt</span>. Nice to meet you.</h1>
           <p>Since the beginning of my journey as a freelance developer nearly 10 years ago, I've done remote work for agencies, consulted for startups, and collaborated with talented people to create digital products for both business and consumer use. I'm quietly confident, naturally curious, and perpetually working on improving my chops one problem at a time.</p>
+            <button id="addNewName"> Add your Name ! And change color !  </button>
         </section>
+
       </article>
 
       <!-- Bloc of list of skill front end and back end -->
         
       <article class="skills">
-        <h2 class="skills--title">My Skills</h2>
+        <!-- <h2 class="skills--title">My Skills</h2> -->
           <section class="column">
               <img src="image/frontend.svg" alt="" />
               <h3>Back-end Developer</h3>
