--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -21,6 +21,11 @@
 
     <main>
       <!-- First banner with title, description, avatar and image desktop -->
+      <div class="banner">
+        <h1>Full Stack Developer</h1>
+        <p>I code beautifully simpl things and I love what I do</p>
+        <img id="logo" src="./image/avatar-bis.png" alt="">
+      </div>
       <!-- You can use the avatar image on the folder image -->
       <section>
         <figure class="desktop">
@@ -33,6 +38,7 @@
         <section class="description pink-bg">
           <h1>Hi, I’m <span id="firstname">Matt</span>. Nice to meet you.</h1>
           <p>Since the beginning of my journey as a freelance developer nearly 10 years ago, I've done remote work for agencies, consulted for startups, and collaborated with talented people to create digital products for both business and consumer use. I'm quietly confident, naturally curious, and perpetually working on improving my chops one problem at a time.</p>
+          <button id="modify">modify text and color</button>
         </section>
       </article>
 
