--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -8,6 +8,7 @@
     />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/portfolio.css" />
+    <script src="portfolio.js"></script>
     <title>Checkpoint 1 Portfolio</title>
   </head>
 
