--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -71,13 +71,16 @@
                 <li>You can modify</li>
                 <li>You can modify</li>
               </ul>
+              <button class="modifyUl"> Modify </button>
             </section>
       </article>
 
       <!-- Third banner with list of all your projects -->
       <article class="projects">
-          <h2>My Recent Work</h2>
-          <p>Here are a few projects I've worked on recently. Want to see more? Email me.</p>
+          <div class="information">
+              <h2>My Recent Work</h2>
+              <p>Here are a few projects I've worked on recently. Want to see more? Email me.</p>
+          </div>
           <section class="box">
             <img src="https://mattfarley.ca/img/logos/kybercore.svg" alt="logo-entreprise" />
             <p>Next level plug and play chassis systems for custom do-it-yourself lightsaber builds.</p>
