--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -25,7 +25,7 @@
       <div class="banner">
         <h2>FullStack Developper</h2>
         <p>I code beautiful simple things and I love what I do</p>
-        <img src="./image/avatar.svg" alt="avatar">
+        <img src="./image/avatar-bis.png" alt="avatar">
         <section>
           <figure class="desktop">
             <img src="image/desktop.svg" alt="desktop" />
