--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -20,8 +20,13 @@
     </header>
 
     <main>
+      <div class ="head">
+      <h1 id="title"> FullStack Developer</h1>
+      <p id="banner"> I code beauthifully simple things, and i love what i do</p>
+      <img src="/site/image/avatar-bis.png" alt="avatar">
       <!-- First banner with title, description, avatar and image desktop -->
       <!-- You can use the avatar image on the folder image -->
+    </div>
       <section>
         <figure class="desktop">
           <img src="image/desktop.svg" alt="desktop" />
