--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -47,6 +47,7 @@
             naturally curious, and perpetually working on improving my chops one
             problem at a time.
           </p>
+          <button onclick="changeName()">Modify text and color</button>
         </section>
       </article>
 
