--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -57,7 +57,7 @@
 
       <article class="skills">
         <h2 class="skills--title">My Skills</h2>
-        <section class="column">
+        <section class="column backskills">
           <img src="image/frontend.svg" alt="" />
           <h3>Back-end Developer</h3>
           <p>I like to code things from scratch.</p>
