Start Step 6 - 7 JS

--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -58,6 +58,10 @@
               <ul>
                 <li>VScode</li>
               </ul>
+              <label for="back_tools"></label>
+              <input type="text" id="back_tools" name="name" size="20" placeholder="Add your dev tools" />
+              <input type="submit" value="Add" />
+
           </section>
           <section class="column">
               <img src="image/frontend.svg" alt="" />
