--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -36,7 +36,7 @@
 
       <!-- Second banner with description of your name and your presentation -->
       <article>
-        <section class="description pink-bg">
+        <section class="description pink-bg" id="sectionColor">
           <h1>Hi, I’m <span id="firstname">Matt</span>. Nice to meet you.</h1>
           <p>
             Since the beginning of my journey as a freelance developer nearly 10
