--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -55,13 +55,12 @@
               <h4 class="pink-text">Languages I speak:</h4>
               <p>MySql</p>
               <h4 class="pink-text">Dev Tools:</h4>
-              <ul>
+              <ul class="back-dev-tools">
                 <li>VScode</li>
               </ul>
               <label for="back_tools"></label>
-              <input type="text" id="back_tools" name="name" size="20" placeholder="Add your dev tools" />
-              <input type="submit" value="Add" />
-
+              <input type="text" id="back_tools" placeholder="Add your dev tools?">
+              <button class="addBtn" id="myButton">Add</button>
           </section>
           <section class="column">
               <img src="image/frontend.svg" alt="" />
@@ -75,7 +74,7 @@
                 <li>You can modify</li>
                 <li>You can modify</li>
               </ul>
-              <button class="modifyUl"> Modify </button>
+              <button id="modifyUl"> Modify </button>
             </section>
       </article>
 
