--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -46,6 +46,7 @@
             naturally curious, and perpetually working on improving my chops one
             problem at a time.
           </p>
+          <button>Modify text and color</button>
         </section>
       </article>
 
