etape 7 et 8 css

--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -80,7 +80,7 @@
       <section class="box">
         <img src="https://mattfarley.ca/img/logos/kybercore.svg" alt="logo-entreprise" />
         <p>Next level plug and play chassis systems for custom do-it-yourself lightsaber builds.</p>
-        <a class="disabled">In development</a>
+        <a class="disabled opac">In development</a>
       </section>
       <section class="box">
         <img src="https://mattfarley.ca/img/logos/basin.svg" alt="logo-entreprise" />
@@ -92,10 +92,12 @@
         <p>Beautifully simple websites for independent distributors of Young Living Essential Oils.</p>
         <a href="www.ylbuilders.com">www.ylbuilders.com</a>
       </section>
-      <section class="box">
-        <img src="https://mattfarley.ca/img/logos/dovetail.svg" alt="logo-entreprise" />
-        <p>A space and member management solution for coworking communities both big and small.</p>
-        <a class="disabled">Shutdown in 2017</a>
+      <section>
+        <class="box""ultime">
+          <img src="https://mattfarley.ca/img/logos/dovetail.svg" alt="logo-entreprise" />
+          <p>A space and member management solution for<br> coworking communities both big and small.</p>
+          <a class="disabled opac">Shutdown in 2017</a>
+
       </section>
     </article>
   </main>
