--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -45,6 +45,7 @@
             naturally curious, and perpetually working on improving my chops one
             problem at a time.
           </p>
+          <button class="change-name">Modify Name and Color</button>
         </section>
       </article>
 
