ajouter code js

--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -23,7 +23,7 @@
   <main>
     <h1>Full stack developer</h1>
     <p>I code simple things beautifuly, and i love what i do</p>
-    <img src="/site/image/avatar.svg" alt="avatar">
+    <img src="/site/image/avatar.svg" id="ima" alt="avatar">
     <!-- First banner with title, description, avatar and image desktop -->
     <!-- You can use the avatar image on the folder image -->
     <section>
@@ -46,7 +46,7 @@
     <!-- Bloc of list of skill front end and back end -->
 
     <article class="skills">
-      <h2 class="skills--title">My Skills</h2>
+      <h2 class="skills--title"></h2>
       <section class="column">
         <img src="image/frontend.svg" alt="" />
         <h3>Back-end Developer</h3>
@@ -72,12 +72,13 @@
         </ul>
       </section>
     </article>
-
+    <h2>My Recent Work</h2>
+    <p>Here are a few projects I've worked on recently. Want to see more? Email me.</p>
     <!-- Third banner with list of all your projects -->
     <article class="projects">
-      <h2>My Recent Work</h2>
-      <p>Here are a few projects I've worked on recently. Want to see more? Email me.</p>
       <section class="box">
+
+
         <img src="https://mattfarley.ca/img/logos/kybercore.svg" alt="logo-entreprise" />
         <p>Next level plug and play chassis systems for custom do-it-yourself lightsaber builds.</p>
         <a class="disabled opac">In development</a>
@@ -92,13 +93,12 @@
         <p>Beautifully simple websites for independent distributors of Young Living Essential Oils.</p>
         <a href="www.ylbuilders.com">www.ylbuilders.com</a>
       </section>
-      <section>
-        <class="box""ultime">
-          <img src="https://mattfarley.ca/img/logos/dovetail.svg" alt="logo-entreprise" />
-          <p>A space and member management solution for<br> coworking communities both big and small.</p>
-          <a class="disabled opac">Shutdown in 2017</a>
-
+      <section class="box fin">
+        <img src="https://mattfarley.ca/img/logos/dovetail.svg" alt="logo-entreprise" />
+        <p>A space and member management solution for coworking communities both big and small.</p>
+        <a class="disabled opac">Shutdown in 2017</a>
       </section>
+
     </article>
   </main>
   <footer class="description pink-bg">
