changement background js

--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -23,7 +23,7 @@
   <main>
     <h1>Full stack developer</h1>
     <p>I code simple things beautifuly, and i love what i do</p>
-    <img src="/site/image/avatar.svg" id="ima" alt="avatar">
+    <img src="/site/image/avatar-bis.png" id="ima" alt="avatar">
     <!-- First banner with title, description, avatar and image desktop -->
     <!-- You can use the avatar image on the folder image -->
     <section>
@@ -40,6 +40,7 @@
           agencies, consulted for startups, and collaborated with talented people to create digital products for both
           business and consumer use. I'm quietly confident, naturally curious, and perpetually working on improving my
           chops one problem at a time.</p>
+        <button class="btn btn1">Modify the text and color</button>
       </section>
     </article>
 
