--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -76,6 +76,7 @@
             <li>You can modify</li>
             <li>You can modify</li>
           </ul>
+          <button class="modify-dev-tools">Modify</button>
         </section>
       </article>
 
